# neo4j-azure-integration-lab

./: .gitignore  CLAUDE.md  README.md
databricks-docs/: p2p-access-guide.md  p2p-architecture.md  p2p-blog-post.md  p2p-dbx.excalidraw  p2p-setup-questions.md
deployments/: ansible_deploy.py  bicep_deploy.py  neo4j_connect.py  neo4j_deploy.py  pyproject.toml  routing_probe_submit.py  validate_deploy.py
deployments/src/: cleanup.py  constants.py  databricks_setup.py  deployment.py  deployment_output.py  m2m_setup.py  models.py  monitor.py  orchestrator.py  resource_groups.py  setup.py  utils.py
deployments/tests/: base.py  bolt.py  databricks.py  databricks_base.py  databricks_serverless.py  neo4j_service.py  nsg.py  peering.py  runner.py  test_deployment_output.py  test_password.py  vmss.py
docs/: ansible.md  bicep.md  databricks-validate.md  m2m.md  testing.md
infra/: databricks-main.bicep  main.bicep
infra/cloud-init/: cluster.yaml  standalone.yaml
infra/modules/: databricks-vnet.bicep  databricks-workspace.bicep  loadbalancer.bicep  neo4j-nsg-peering.bicep  network.bicep  vmss.bicep  vnet-peering.bicep
keycloak-infra/: README.md  keycloak_architecture.md
keycloak-test-client/: README.md
notebooks/: neo4j_classic_probe.py  neo4j_connectivity_test.ipynb  neo4j_routing_probe.py  neo4j_serverless_connectivity_test.ipynb  neo4j_serverless_probe.py
playbooks/: databricks.yml  neo4j.yml  requirements.yml  setup.sh
playbooks/scenarios/: cluster-v2025.yml  peer-databricks-v2025.yml  (+1 more)
validate-bearer-token/: README.md  validate_bearer.py
(+12 files in other folders)
