[project]
name = "neo4j_azure_deploy"
version = "0.1.0"
description = "Automated deployment and testing framework for Neo4j Enterprise Edition on Azure"
requires-python = ">=3.12"
dependencies = [
    "databricks-sdk>=0.40.0",
    "neo4j>=6.0.0",
    "pydantic>=2.12.4",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "typer>=0.20.0",
]

[project.scripts]
bicep-deploy = "bicep_deploy:main"
ansible-deploy = "ansible_deploy:main"
neo4j-connect = "neo4j_connect:main"
validate_deploy = "src.validate_deploy:main"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
